updated with erd and comment added
