# src/models/blog.js
@@ -6,9 +6,23 @@
 const { mongoose } = require("../configs/dbConnection");
 
 /* -------------------------------------------------------------------------- */
+// {
+//     "title": "Blog Title 1",
+//     "content": "Blog Content 1",
+//     "content": "Blog Content 1",
+//     "image": "https://cdn.pixabay.com/photo/2013/07/12/17/47/test-pattern-152459_1280.png",
+//     "isPublish": true,
+// }
+/* -------------------------------------------------------------------------- */
 //? Blog:
 const BlogSchema = new mongoose.Schema(
   {
+    userId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "User",
+      required: true,
+    },
+
     categoryId: {
       type: mongoose.Schema.Types.ObjectId,
       ref: "Categories",
@@ -27,9 +41,34 @@ const BlogSchema = new mongoose.Schema(
       required: [true, "It must to be sent."],
     },
 
-    published: {
+    image: {
+      type: String,
+      trim: true,
+      required: true,
+    },
+
+    isPublish: {
       type: Boolean,
       default: true,
+    },
+
+    comments: [
+      {
+        type: String,
+        ref: "Comments",
+      },
+    ],
+
+    likes: [
+      {
+        type: String,
+        ref: "User",
+      },
+    ],
+
+    countOfVisitors: {
+      type: Number,
+      default: 0,
     },
   },
 
